26-02-2005 Qball <qball@qballcow.nl>
	* glade/preferences.glade:	Cleaned up layout a bit.
	* fixed not free'ed memory from config

25-02-2005 Qball <Qball@qballcow.nl>
	* started working on format editor
	* src/preferences.[c|glade]: Now uses the format editor for the
	playlist and player string.
	* src/main.c:		error window forced to one instance.
	* src/player.c:		time box now resizes with font size.. (width
	and height) title box only height.
	* src/preferences.c:	output isn't hidden when not availible but
	made insensitive

24-02-2005 Qball <Qball@qballcow.nl>
	* cleaned up some compile warnings.. (and all // comment )
	* src/playlist.c:	Fixed problem not loading song as if it where
	a playlist.
	* src/playlist.c:	Fixed problem with id3 info



23-02-2005 Qball <Qball@qballcow.nl>
	* glade/gmpc.glade:	Added Playlist tab + obtions
	* src/mpdinteraction.c:	Disconnect is always reload.
	* src/playlist3.c:	make open to location work propperly.
	* src/libmpd.c:		Update timeout on the fly, if connected.
	* src/main.c:		Uses libmpd to track song changes.
	* src/libmpd.[c|h]:	Added function that returns the changed songs.
	* src/mpdinteractions.c:After disconnect not directly a reconnect
	(with autoconnect enabled)


22-02-2005 Qball <qball@qballcow.nl>
	* Move to libmpd complete beside the plchange function.
	* src/preferences.c:	Moved to libmpd.
	* src/main.h:		Removed info.connection, info.status,
	info.stats.
	* src/libmpd.c:		Added support for getting and setting output
	device
	* src/libmpd.c:		Added mpd_ob_playlist_add,
	mpd_ob_plalist_update_dir (and more)functions.
	* src/playlist3.c:	Uses only libmpd now.
	* src/open-locations:	Uses libmpd.
	* src/libmpd.c:		Added get/set crossfade.
	* src/preferences.c:	Moved crossfade to libmpd commands.


21-02-2005 Qball <qball@qballcow.nl>
	* Cleaned up compile warnings.
	* src/playlist3.c:	Make use of queue functions of libmpd
	* src/libmpd.c:		Cleaned up compile warnings.
	* src/libmpd.c:		Added queue commit functions.